--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="products">
             <div class="product">
               <div class="product-img">
-                <img src="img/jas.png" height="150px" width="100%">
+                <img src="img/Jas.png" height="150px" width="100%">
               </div>
 
               <div class= "product-content">
