style: fix style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>RuxTech SHOP</title>
-  <link rel="stylesheet team" href="stylesheet-team.css">
+  <link rel="stylesheet team" href="stylesheet.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="responsive.css">
 </head>
@@ -81,7 +81,7 @@
             <img src="img/Baju.png" height="150px" width="100%">
           </div>
           <div class="product-content">
-            <h3>Kaos Orang Tua</h3>
+            <h3>Kaos</h3>
             <h4>Rp 100.000</h4>
             <p>
               Kaos yang keren dan nyaman dipakai kapanpun.
